feat: get all batches
